CHROMIUM: drm/img-rogue: stop defining gpu tracepoints

This is unnecessary since this is done for us by CONFIG_GPU_TRACEPOINTS.

This meant that when this option was enabled that the gpu tracepoint functions
would be defined multiple times, resulting in the following errors:

  drivers/built-in.o:(__tracepoints+0x1030): multiple definition of `__tracepoint_gpu_sched_switch'
  kernel/built-in.o:(__tracepoints+0x1c00): first defined here
  drivers/built-in.o:(__tracepoints+0xff8): multiple definition of `__tracepoint_gpu_job_enqueue'
  kernel/built-in.o:(__tracepoints+0x1bc8): first defined here

BUG=chromium:822555
TEST=Build the kernel for Elm

Change-Id: I8657a10e0331a05d2ff9eefccbcdd6fae46ca29e
Signed-off-by: Frank Binns <frank.binns@imgtec.com>
Reviewed-on: https://chromium-review.googlesource.com/966281
Commit-Ready: Guenter Roeck <groeck@chromium.org>
Reviewed-by: Guenter Roeck <groeck@chromium.org>
Reviewed-by: Nicolas Boichat <drinkcat@chromium.org>